fixed background pattern beeing too small

--- a/src/scss/layout/_testimonial.scss
+++ b/src/scss/layout/_testimonial.scss
@@ -10,7 +10,7 @@
   background-position:  center 2.3rem,
                         left bottom;
   background-repeat:    no-repeat;
-  background-size:      auto 18vh,
+  background-size:      auto 315px,
                         auto;
 
   @include lg {
